--- a/index.html
+++ b/index.html
@@ -103,20 +103,25 @@
       </li>
 
       <li class="nav-item-item">
-        <a class="nav-link" href="#Biodata">Biodata</a>
+        <a class="nav-link" href="#Biodata">Home</a>
       </li>
       <li class="nav-item-item">
-        <a class="nav-link" href="#Achievements">Achievements</a>
+        <a class="nav-link" href="#Achievements">About</a>
       </li>
       <li class="nav-item-item">
-        <a class="nav-link" href="#Projects">Projects</a>
+        <a class="nav-link" href="#Projects">Experiences</a>
       </li>
       <li class="nav-item-item">
         <a class="nav-link" href="#Certifications">Education</a>
       </li>
       <li class="nav-item-item">
-        <a class="nav-link" href="#Contact">Contact</a>
+        <a class="nav-link" href="#Contact">Skills</a>
       </li>
+      <li class="nav-item">
+      <a class="nav-link active" href="#interest">Interest</a>
+       </li>
+      <li class="nav-item">
+      <a class="nav-link active" href="#award">Award</a>
     </ul>
     <div class="all-body-cover">
       <img
