--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
     </ul>
     <div class="all-body-cover">
       <img
-        width="200px"
+        width="1000px"
         src="assets/img/ptak.jpg"
         class="img-thumbnail rounded-circle mx-auto d-block"
-        alt="..."
+        alt="pitak"
       />
       <div class="nama">
         <h4 class="text-center fw-bold">Carudin</h4>
