--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
     </ul>
     <div class="all-body-cover">
       <img
-        width="100px"
-        src="assets/img/ptak.jpg"
+        width="200px"
+        src="assets/img/pitak.jpg"
         class="img-thumbnail rounded-circle mx-auto d-block"
         alt="pitak"
       />
